--- a/Frontend/Streamify_Frontend/src/index.css
+++ b/Frontend/Streamify_Frontend/src/index.css
@@ -1,5 +1,13 @@
-@import "tailwindcss";
-:root {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+body {
+  background-color: #121212; /* Dark background */
+  color: white; /* Optional: Set text color to white for better contrast */
+}
+
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -66,4 +74,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
